# dflockd

./: .gitignore  .goreleaser.yml  CHANGELOG.md  LICENSE  Makefile  README.md  README_old.md  mkdocs.yml  pyproject.toml  requirements_mkdocs.txt
.github/workflows/: ci.yml  docs.yml  release.yml
client/: client.go  client_test.go
cmd/bench/: main.go
cmd/dflockd/: main.go
cmd/soak/: main.go
docs/: changelog.md  client.md  index.md  server.md
docs/api/: protocol.md  python.md
docs/architecture/: overview.md  protocol.md
docs/client/: async.md  go.md  lowlevel.md  sync.md
docs/getting-started/: examples.md  installation.md  quickstart.md
docs/guide/: architecture.md  client.md  sharding.md
docs/server/: configuration.md  protocol.md
examples/: bench_async.py  bench_sync.py  client_demo.py  sync_client_demo.py  two_phase_demo.py
go/: README.md  go.mod
go/internal/protocol/: protocol.go
go/internal/server/: server.go  server_test.go
internal/config/: config.go  config_test.go
internal/lock/: lock.go  lock_test.go
internal/protocol/: protocol.go  protocol_test.go
internal/server/: server.go  server_test.go
internal/signal/: signal.go  signal_test.go
internal/testutil/: tls.go
internal/watch/: watch.go  watch_test.go
site/: 404.html  index.html  sitemap.xml
site/api/protocol/: index.html
site/api/python/: index.html
site/changelog/: index.html
site/client/async/: index.html
site/client/sync/: index.html
site/getting-started/examples/: index.html
site/search/: search_index.json
src/dflockd/: client.py  server.py  sharding.py  sync_client.py
tests/: conftest.py  test_client.py  test_server.py  test_sharding.py  test_sync_client.py
ts/: README.md  client.ts  example.ts  package-lock.json  package.json  tsconfig.json
(+5 files in other folders)
